fix header mobile - add z-index so that the menu is always on top of the other elements

--- a/styles/modules/_header.scss
+++ b/styles/modules/_header.scss
@@ -18,6 +18,7 @@
     width: 100%;
     height: 100%;
     transition: left .5s ease;
+    z-index: 10;
 
     &.active {
       left: 0;
